[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gl_tracker"
version = "1.0.0"
description = "GL Tracker"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["src/tests"]
asyncio_mode = "auto"