[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Counter_Part"
version = "1.0.0"
description = "Counter Part"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "docopt==0.6.2",
    "et-xmlfile==2.0.0",
    "fastapi==0.135.1",
    "fastexcel==0.19.0",
    "h11==0.16.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "numpy==2.4.2",
    "openpyxl==3.1.5",
    "packaging==26.0",
    "pip==26.0.1",
    "pipreqs==0.4.13",
    "pluggy==1.6.0",
    "polars==1.38.1",
    "polars-runtime-32==1.38.1",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "requests==2.32.5",
    "six==1.17.0",
    "starlette==0.52.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.41.0",
    "xlsx2csv==0.8.6",
    "xlsxwriter==3.2.9",
    "yarg==0.1.10",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["src/tests"]
asyncio_mode = "auto"